--- a/Tracer.Web/packages.config
+++ b/Tracer.Web/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.28.3" targetFramework="net452" developmentDependency="true" />
   <package id="jQuery" version="1.6.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net452" />
@@ -17,5 +16,5 @@
   <package id="Nancy.Owin" version="1.4.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Tracer.Fody" version="1.2.0" targetFramework="net452" developmentDependency="true" />
+  <package id="PostSharp" version="4.2.17" targetFramework="net45" />
 </packages>
