--- a/Tracer.PostSharp/Tracer.PostSharp.csproj
+++ b/Tracer.PostSharp/Tracer.PostSharp.csproj
@@ -44,8 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TraceAttributeBase.cs" />
     <Compile Include="TraceAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TraceAttributeContext.cs" />
+    <Compile Include="TraceBoundaryAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
