--- a/Tracer.Common/Tracer.Common.csproj
+++ b/Tracer.Common/Tracer.Common.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Extensions\TraceMessageExtensions.cs" />
+    <Compile Include="Http\HttpRequest.cs" />
     <Compile Include="Http\IHttpRequest.cs" />
     <Compile Include="Messages\TraceEvent.cs" />
     <Compile Include="Messages\TraceMessage.cs" />
