--- a/Tracer.Web/Tracer.Web.csproj
+++ b/Tracer.Web/Tracer.Web.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Helpers\HttpHelper.cs" />
     <Compile Include="Hubs\TraceHub.cs" />
     <Compile Include="Modules\FooBarModule.cs" />
     <Compile Include="Modules\GraphModule.cs" />
