--- a/Tracer.Common/Tracer.Common.csproj
+++ b/Tracer.Common/Tracer.Common.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Extensions\TraceMessageExtensions.cs" />
     <Compile Include="Http\HttpRequest.cs" />
