Cleaned up the graph code and split the graph into 3 parts UI / graph and event stream.

--- a/Tracer.Web/Tracer.Web.csproj
+++ b/Tracer.Web/Tracer.Web.csproj
@@ -138,6 +138,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\Public\graphEventInfo.js" />
     <Content Include="Scripts\Public\tracer.js" />
     <Content Include="Scripts\Public\graph.js" />
     <Content Include="Styles\style.css" />
