Randomly generated method paths given maximum depth/width

--- a/Tracer.Application/Tracer.Application.csproj
+++ b/Tracer.Application/Tracer.Application.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\BarLogic.cs" />
+    <Compile Include="Logic\BaseLogic.cs" />
     <Compile Include="Logic\FooLogic.cs" />
     <Compile Include="Modules\ApplicationModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
