Updated the tracer graph UI
Updated package.json to download the correct dev dependencies.
Added a gulp file to transform the SASS files.
Updated the tracer graph UI to include:
Play / pause graph events.
Drag scroll navigation.
View method information
View arguments as JSON tree.

--- a/Tracer.Common/Tracer.Common.csproj
+++ b/Tracer.Common/Tracer.Common.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Extensions\TraceMessageExtensions.cs" />
     <Compile Include="Http\HttpRequest.cs" />
     <Compile Include="Http\IHttpRequest.cs" />
+    <Compile Include="Messages\Argument.cs" />
     <Compile Include="Messages\TraceEvent.cs" />
     <Compile Include="Messages\TraceMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
