--- a/Tracer.Web/Tracer.Web.csproj
+++ b/Tracer.Web/Tracer.Web.csproj
@@ -113,10 +113,10 @@
     <None Include=".bowerrc" />
     <None Include="App.config" />
     <None Include="bower.json" />
+    <None Include="Fonts\glyphicons-halflings-regular.eot" />
+    <None Include="Fonts\glyphicons-halflings-regular.ttf" />
+    <None Include="Fonts\glyphicons-halflings-regular.woff" />
     <None Include="packages.config" />
-    <None Include="Styles\main.scss" />
-    <None Include="Styles\palette.scss" />
-    <None Include="Styles\vars.scss" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\Vendor\" />
@@ -132,16 +132,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Components\event-graph\event-graph.html" />
-    <Content Include="Components\event-info\even-info.css" />
-    <Content Include="Components\event-info\event-info.html" />
-    <Content Include="Components\tracer-dashboard\tracer-dashboard.css" />
-    <Content Include="Components\tracer-dashboard\tracer-dashboard.html" />
-    <Content Include="gulpFile.js" />
+    <Content Include="Fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Scripts\Public\graphEventInfo.js" />
     <Content Include="Scripts\Public\tracer.js" />
     <Content Include="Scripts\Public\graph.js" />
-    <None Include="Styles\fonts.scss" />
+    <Content Include="Scripts\Public\ui.js" />
+    <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\main.css" />
     <Content Include="Views\graph.html" />
     <Content Include="Views\trace.html" />
   </ItemGroup>
