--- a/Tracer.Web/bower.json
+++ b/Tracer.Web/bower.json
@@ -21,26 +21,18 @@
     "jquery": "~2.2.0",
     "signalr": "~2.2.0",
     "bootstrap": "~3.3.6",
-	"jquery-jsonview": "~1.2.3",
-	"jquery.kinetic": "~2.0.0",
-	"iron-grid": "",
-	"iron-signals": "PolymerElements/iron-signals#^1.0.0",
-    "polymer": "Polymer/polymer#^1.2.0",
-	"paper-dialog": "PolymerElements/paper-dialog#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
-    "paper-item": "PolymerElements/paper-item#^1.0.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.0.0",
-    "paper-menu-button": "PolymerElements/paper-menu-button#^1.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
-    "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-	"paper-spinner": "PolymerElements/paper-spinner#^1.0.0",
-    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
-	"paper-button": "PolymerElements/paper-button#^1.0.0"
+    "jquery-jsonview": "~1.2.3",
+    "datatables.net": "",
+    "datatables.net-bs": "",
+    "datatables.net-responsive": "",
+    "datatables.net-responsive-bs": "",
+    "jstree": "~3.2.1",
+    "jstree-bootstrap-theme": "~1.0.1"
   },
   "resolutions": {
     "polymer": "^1.2.0",
     "webcomponentsjs": "^0.7.18",
-    "font-roboto": "^1.0.1"
+    "font-roboto": "^1.0.1",
+    "jstree": "~3.0.4"
   }
 }
